--- a/mediaq910.css
+++ b/mediaq910.css
@@ -19,9 +19,9 @@
         color: white;
     }
     .slid-hdn-main{
-        margin-top: 40px !important;
+        margin-top: 10px !important;
         color: white;
-        font-size:35px !important;
+        font-size:25px !important;
         text-align: left;
         font-weight: bold;
         margin-left: 20px;
